<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnTertiary"
    tools:context="pl.plantoplate.ui.login.remind_password.EnterCodeActivity">

    <TextView
        android:layout_marginTop="70dp"
        android:id="@+id/plantoplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/quicksand_semibold"

        android:gravity="top"
        android:text="@string/plantoplate"
        android:textAppearance="@style/plantoplate"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/przypomnienie_hasla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"

        android:fontFamily="@font/quicksand_regular"

        android:text="@string/przyp_haslo"
        android:textAppearance="@style/potwierdzen"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantoplate"
        app:layout_constraintVertical_bias="0.077" />


    <TextView
        android:id="@+id/skorzystaj_z_kodu"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/skorzystaj_"
        android:textAppearance="@style/skorzystaj_"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przypomnienie_hasla"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_marginBottom="184dp"

        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/wprowadz_kod"

        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="?attr/colorTertiary"

        app:hintTextColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skorzystaj_z_kodu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wprowadz_kod"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:singleLine="true"
            android:maxLines="1"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/wy_lij_pono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"

        android:layout_alignParentRight="true"

        android:layout_alignParentBottom="true"

        android:fontFamily="@font/quicksand_regular"
        android:textColor="@color/text_clikable_no_theme"

        android:gravity="top"
        android:text="@string/wy_lij_pono"
        android:textAppearance="@style/wy_lij_pono"
        app:layout_constraintBottom_toTopOf="@+id/button_zatwierdzenie_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_zatwierdzenie_link"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"

        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp"

        android:fontFamily="@font/quicksand_medium"

        android:text="@string/zatwierdz"

        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.658"
       />

</androidx.constraintlayout.widget.ConstraintLayout>