<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnTertiary"
    tools:context="pl.plantoplate.ui.login.remind_password.ChangePasswordActivity">

    <TextView
        android:layout_marginTop="70dp"
        android:id="@+id/plantoplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/quicksand_semibold"

        android:gravity="top"
        android:text="@string/plantoplate"
        android:textAppearance="@style/plantoplate"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/przypomnienie_hasla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"

        android:fontFamily="@font/quicksand_regular"

        android:text="@string/przyp_haslo"
        android:textAppearance="@style/potwierdzen"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantoplate"
        app:layout_constraintVertical_bias="0.077" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wprowadz_nowe_haslo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_marginBottom="184dp"
        android:fontFamily="@font/quicksand_regular"

        android:hint="@string/wprowadz_new_haslo"
        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:endIconMode="password_toggle"

        app:boxStrokeColor="?attr/colorTertiary"

        app:endIconTint="?attr/colorSecondaryVariant"

        app:hintTextColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przypomnienie_hasla"
        app:layout_constraintVertical_bias="0.426">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nowe_haslo"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:singleLine="true"
            android:maxLines="1"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wprowadz_nowe_haslo_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_marginBottom="184dp"
        android:fontFamily="@font/quicksand_regular"

        android:hint="@string/wprowadz_new_haslo_2"
        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:endIconMode="password_toggle"

        app:boxStrokeColor="?attr/colorTertiary"

        app:endIconTint="?attr/colorSecondaryVariant"

        app:hintTextColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadz_nowe_haslo"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nowe_haslo2"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:singleLine="true"
            android:maxLines="1"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_zatwierdzenie"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"

        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp"

        android:text="@string/zatwierdz"

        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadz_nowe_haslo_2"
        app:layout_constraintVertical_bias="0.658"
         />

</androidx.constraintlayout.widget.ConstraintLayout>